--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <div class="charge-level"></div>
             <div class="percentage-text"></div>
         </div>
-        <p class="date-text">last uptade:<br> DMY:08 feb 2025 <br>(--:-- by China time) </p>
+        <p class="date-text">last uptade:<br> DMY:08 feb 2025 <br>(05:50 by China time) </p>
     </div>
 
     <script>
@@ -133,7 +133,7 @@
     }
 
     // Установите нужный процент здесь
-    let percentage = 45; // Измените это значение на нужное
+    let percentage = 60; // Измените это значение на нужное
     updateBattery(percentage);
     </script>
 </body>
