--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <div class="charge-level"></div>
             <div class="percentage-text"></div>
         </div>
-        <p class="date-text">last uptade:<br> DD.MM.YYYY: 08.02.2025 <br>(06:00 by China time) </p>
+        <p class="date-text">last uptade:<br> DD.MM.YYYY: 08.02.2025 <br>(about 06:00 by China time) </p>
     </div>
 
     <script>
